--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,43 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="wrapper">
+        <div class="row-one">
+            <div class="row-one-item"></div>
+            <div class="row-one-item">
+                <div class="row-one-item-sub"></div>
+                <div class="row-one-item-sub"></div>
+            </div>
+            <div class="row-one-item"></div>
+        </div>
+
+
+        <div class="row-two">
+            <div class="left-column"></div>
+            <div class="right-column">
+                <div class="right-top"></div>
+                <div class="right-bottom"></div>
+            </div>
+
+        </div>
+
+
+
+
+
+        <div class="row-three">
+            <div class="row-three-item1"></div>
+            <div class="row-three-item2"></div>
+            <div class="row-three-item3"></div>
+            <div class="row-three-item4"></div>
+        </div>
+
+
+    </div>
+
+
 </body>
+
 </html>
